fix: fix align of title in main-section5 on  mobile screen

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -503,7 +503,9 @@ body {
     grid-column-gap: 20px;
     grid-template: auto / 1fr 1fr 1fr;
     grid-template-areas: "title title title" "card1 card2 card3" "card4 card4 card4" "card6 card6 card6" "card5 card7 card7" "card8 card8 card9";
-    padding-top: 60px; } }
+    padding-top: 60px; }
+    .main-section5__title {
+      justify-self: center; } }
 
 /* main-section5 end */
 /* main-end */
